Fixed case if user went out of bounds on project route

--- a/styles/ProjectDetails.module.scss
+++ b/styles/ProjectDetails.module.scss
@@ -69,6 +69,20 @@
                 text-align: center;
             }
         }
+        
 
     }
+
+    .errorPage{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        font-size: 3rem;
+        p{
+            justify-self: center;
+            text-align: center;
+        }
+    }
+    
+
 }
